Added tag conversion from string to gardenTag on endpoint